--- a/toolstatus.html
+++ b/toolstatus.html
@@ -79,7 +79,7 @@
 
             <!-- Nav Item - Inventory -->
             <li class="nav-item">
-                <a class="nav-link" href="#">
+                <a class="nav-link" href="Inventory.html">
                     <i class="fas fa-fw fa-boxes"></i>
                     <span>Inventory</span></a>
             </li>
