--- a/Inventory.html
+++ b/Inventory.html
@@ -19,11 +19,13 @@
         .inventory-header .input-group {
             position: relative;
             margin-bottom: 10px;
+            display: flex;
+            width: 100%;
         }
         .inventory-header .input-group input {
-            width: 100%;
+            flex: 1;
             padding: 10px 20px;
-            border-radius: 50px;
+            border-radius: 50px 0 0 50px;
             border: 1px solid #e3e6f0;
             background-color: #f8f9fc;
             box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.075);
@@ -32,6 +34,9 @@
         .inventory-header .input-group input:focus {
             border-color: #a1a1a1;
             box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+        }
+        .inventory-header .input-group .btn {
+            border-radius: 0 50px 50px 0;
         }
         .filter-btn-group {
             display: flex;
@@ -159,6 +164,7 @@
                     <div class="inventory-header">
                         <div class="input-group">
                             <input type="text" class="form-control" placeholder="Search...">
+                            <button class="btn btn-primary"><i class="fas fa-search"></i></button>
                         </div>
                         <div class="filter-btn-group">
                             <button class="btn btn-dark">Add</button>
