--- a/Inventory.html
+++ b/Inventory.html
@@ -13,8 +13,8 @@
             margin-bottom: 20px;
         }
         .inventory-header .btn {
-            background-color: #5a5a5a;
-            border-color: #5a5a5a;
+            background-color: #4e73df;
+            border-color: #4e73df;
         }
         .inventory-header .input-group {
             position: relative;
@@ -44,12 +44,12 @@
         }
         .filter-btn-group .btn {
             margin-left: 5px;
-            background-color: #5a5a5a;
-            border-color: #5a5a5a;
+            background-color: #4e73df;
+            border-color: #4e73df;
         }
         .filter-btn-group .filter-label {
             margin: 0 10px;
-            color: grey;
+            color: rgb(0, 0, 0);
             font-weight: bold;
         }
         .inventory-item {
@@ -84,7 +84,7 @@
         <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
             <!-- Sidebar - Brand -->
-            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
+            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="dashboard.html">
                 <div class="sidebar-brand-text mx-3">SERVPRO</div>
             </a>
 
@@ -93,7 +93,7 @@
 
             <!-- Nav Item - Dashboard -->
             <li class="nav-item">
-                <a class="nav-link" href="index.html">
+                <a class="nav-link" href="dashboard.html">
                     <i class="fas fa-fw fa-tachometer-alt"></i>
                     <span>Dashboard</span></a>
             </li>
@@ -110,7 +110,7 @@
 
             <!-- Nav Item - Status -->
             <li class="nav-item">
-                <a class="nav-link" href="status.html">
+                <a class="nav-link" href="toolstatus.html">
                     <i class="fas fa-fw fa-info-circle"></i>
                     <span>Status</span></a>
             </li>
