--- a/dashboard.html
+++ b/dashboard.html
@@ -27,7 +27,7 @@
 
             <!-- Nav Item - Dashboard -->
             <li class="nav-item active">
-                <a class="nav-link" href="#">
+                <a class="nav-link" href="dashboard.html">
                     <i class="fas fa-fw fa-tachometer-alt"></i>
                     <span>Dashboard</span></a>
             </li>
@@ -37,9 +37,15 @@
 
             <!-- Nav Item - Inventory -->
             <li class="nav-item">
-                <a class="nav-link" href="#">
+                <a class="nav-link" href="Inventory.html">
                     <i class="fas fa-fw fa-boxes"></i>
                     <span>Inventory</span></a>
+            </li>
+
+            <li class="nav-item">
+                <a class="nav-link" href="toolstatus.html">
+                    <i class="fas fa-fw fa-boxed"></i>
+                <span>Status</span></a>
             </li>
 
             <!-- Nav Item - History -->
