fixed icon and highlight issue

--- a/Inventory.html
+++ b/Inventory.html
@@ -73,6 +73,19 @@
             margin-bottom: 5px;
             color: #6c757d;
         }
+
+        .input-group {
+            max-width: 300px;
+            margin-bottom: 20px;
+        }
+
+        .input-group input {
+            border-radius: 20px 0 0 20px;
+        }
+
+        .input-group button {
+            border-radius: 0 20px 20px 0;
+        }
     </style>
 </head>
 <body id="page-top">
@@ -111,10 +124,17 @@
             <!-- Nav Item - Status -->
             <li class="nav-item">
                 <a class="nav-link" href="toolstatus.html">
-                    <i class="fas fa-fw fa-info-circle"></i>
+                    <i class="fas fa-fw fa-ellipsis-h"></i>
                     <span>Status</span></a>
             </li>
 
+            <!--Nav Item - Users-->
+            <li class="nav-item">
+                <a class="nav-link" href="users.html">
+                    <i class="fas  fa-fw fa-user-circle"></i>
+                <span>Users</span></a>
+            </li>
+            
             <!-- Nav Item - History -->
             <li class="nav-item">
                 <a class="nav-link" href="history.html">
