--- a/dashboard.html
+++ b/dashboard.html
@@ -7,6 +7,8 @@
     <title>Inventory Dashboard</title>
     <!-- SB Admin 2 Bootstrap CSS -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/startbootstrap-sb-admin-2/4.0.0/css/sb-admin-2.min.css" rel="stylesheet">
+    <!-- Font Awesome -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
 </head>
 
 <body id="page-top">
@@ -38,16 +40,24 @@
             <!-- Nav Item - Inventory -->
             <li class="nav-item">
                 <a class="nav-link" href="Inventory.html">
-                    <i class="fas fa-fw fa-boxes"></i>
+                    <i class="fas fa-fw fa-box"></i>
                     <span>Inventory</span></a>
             </li>
 
+            <!--Nav  Item - Tool Status-->
             <li class="nav-item">
                 <a class="nav-link" href="toolstatus.html">
-                    <i class="fas fa-fw fa-boxed"></i>
+                    <i class="fas fa-fw fa-ellipsis-h"></i>
                 <span>Status</span></a>
             </li>
 
+            <!--Nav Item - Users-->
+            <li class="nav-item">
+                <a class="nav-link" href="users.html">
+                    <i class="fas  fa-fw fa-user-circle"></i>
+                <span>Users</span></a>
+            </li>
+            
             <!-- Nav Item - History -->
             <li class="nav-item">
                 <a class="nav-link" href="#">
