--- a/toolstatus.html
+++ b/toolstatus.html
@@ -7,6 +7,8 @@
     <title>Tool Status</title>
     <!-- SB Admin 2 Bootstrap CSS -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/startbootstrap-sb-admin-2/4.0.0/css/sb-admin-2.min.css" rel="stylesheet">
+    <!-- Font Awesome -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <style>
         .card-header {
             display: flex;
@@ -68,7 +70,7 @@
             <hr class="sidebar-divider my-0">
 
             <!-- Nav Item - Dashboard -->
-            <li class="nav-item active">
+            <li class="nav-item">
                 <a class="nav-link" href="dashboard.html">
                     <i class="fas fa-fw fa-tachometer-alt"></i>
                     <span>Dashboard</span></a>
@@ -80,15 +82,22 @@
             <!-- Nav Item - Inventory -->
             <li class="nav-item">
                 <a class="nav-link" href="Inventory.html">
-                    <i class="fas fa-fw fa-boxes"></i>
+                    <i class="fas fa-fw fa-box"></i>
                     <span>Inventory</span></a>
             </li>
 
             <!-- Nav Item - Status -->
-            <li class="nav-item">
+            <li class="nav-item active">
                 <a class="nav-link" href="toolstatus.html">
-                    <i class="fas fa-fw fa-status"></i>
+                    <i class="fas fa-fw fa-ellipsis-h"></i>
                     <span>Status</span></a>
+            </li>
+
+            <!--Nav Item - Users-->
+            <li class="nav-item">
+                <a class="nav-link" href="users.html">
+                    <i class="fas  fa-fw fa-user-circle"></i>
+                <span>Users</span></a>
             </li>
             
             <!--Nav Item - History-->
