--- a/Inventory.html
+++ b/Inventory.html
@@ -134,7 +134,7 @@
                     <i class="fas  fa-fw fa-user-circle"></i>
                 <span>Users</span></a>
             </li>
-            
+
             <!-- Nav Item - History -->
             <li class="nav-item">
                 <a class="nav-link" href="history.html">
@@ -153,6 +153,11 @@
 
                 <!-- Topbar -->
                 <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
+
+                    <!-- Sidebar Toggle (Topbar) -->
+                    <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
+                        <i class="fa fa-bars"></i>
+                    </button>
 
                     <!-- Topbar Navbar -->
                     <ul class="navbar-nav ml-auto">
