--- a/users.html
+++ b/users.html
@@ -1,31 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Users</title>
     <!-- SB Admin 2 Bootstrap CSS -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/startbootstrap-sb-admin-2/4.1.3/css/sb-admin-2.min.css"
-        rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/startbootstrap-sb-admin-2/4.1.3/css/sb-admin-2.min.css" rel="stylesheet">
     <!-- Font Awesome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <style>
-        .sidebar {
-            background-color: #f8f9fc;
+        .inventory-header {
+            margin-bottom: 20px;
         }
-
-        .sidebar-brand {
+        .inventory-header .btn {
             background-color: #4e73df;
-            color: #ffffff;
+            border-color: #4e73df;
         }
-
-        .topbar {
+        .inventory-header .input-group {
+            position: relative;
+            margin-bottom: 10px;
+            display: flex;
+            width: 100%;
+        }
+        .inventory-header .input-group input {
+            flex: 1;
+            padding: 10px 20px;
+            border-radius: 50px 0 0 50px;
+            border: 1px solid #e3e6f0;
             background-color: #f8f9fc;
+            box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.075);
+            transition: border-color 0.2s, box-shadow 0.2s;
         }
-
-        .container-fluid {
-            padding-top: 20px;
+        .inventory-header .input-group input:focus {
+            border-color: #a1a1a1;
+            box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+        }
+        .inventory-header .input-group .btn {
+            border-radius: 0 50px 50px 0;
+        }
+        .filter-btn-group {
+            display: flex;
+            align-items: center;
+        }
+        .filter-btn-group .btn {
+            margin-left: 5px;
+            background-color: #4e73df;
+            border-color: #4e73df;
+        }
+        .filter-btn-group .filter-label {
+            margin: 0 10px;
+            color: rgb(0, 0, 0);
+            font-weight: bold;
+        }
+        .inventory-item {
+            background-color: #ffffff;
+            border: 1px solid #e3e6f0;
+            padding: 15px;
+            margin-bottom: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            transition: transform 0.2s, box-shadow 0.2s;
+        }
+        .inventory-item:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+        }
+        .inventory-item h5 {
+            font-size: 1.25rem;
+            margin-bottom: 10px;
+        }
+        .inventory-item p {
+            margin-bottom: 5px;
+            color: #6c757d;
         }
 
         .input-group {
@@ -39,21 +85,6 @@
 
         .input-group button {
             border-radius: 0 20px 20px 0;
-        }
-
-        .table th,
-        .table td {
-            vertical-align: middle;
-        }
-
-        @media (max-width: 768px) {
-            .sidebar {
-                display: none;
-            }
-
-            .topbar .username {
-                display: none;
-            }
         }
     </style>
 </head>
@@ -86,7 +117,7 @@
 
             <!-- Nav Item - Inventory -->
             <li class="nav-item">
-                <a class="nav-link" href="Inventory.html">
+                <a class="nav-link" href="inventory.html">
                     <i class="fas fa-fw fa-box"></i>
                     <span>Inventory</span></a>
             </li>
@@ -98,11 +129,11 @@
                     <span>Status</span></a>
             </li>
 
-            <!--Nav Item - Users-->
+            <!-- Nav Item - Users -->
             <li class="nav-item active">
                 <a class="nav-link" href="users.html">
-                    <i class="fas  fa-fw fa-user-circle"></i>
-                <span>Users</span></a>
+                    <i class="fas fa-fw fa-user-circle"></i>
+                    <span>Users</span></a>
             </li>
             
             <!-- Nav Item - History -->
@@ -124,9 +155,14 @@
                 <!-- Topbar -->
                 <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
 
+                    <!-- Sidebar Toggle (Topbar) -->
+                    <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
+                        <i class="fa fa-bars"></i>
+                    </button>
+
                     <!-- Topbar Navbar -->
                     <ul class="navbar-nav ml-auto">
-                    <div class="topbar-divider d-none d-sm-block"></div>
+                        <div class="topbar-divider d-none d-sm-block"></div>
                         <li class="nav-item dropdown no-arrow">
                             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -157,11 +193,12 @@
                                 </button>
                             </div>
                         </div>
-                        <div class="ml-auto">
-                            <button class="btn btn-primary">
-                                Add User
-                            </button>
-                        </div>
+                    </div>
+
+                    <div class="ml-auto mb-4">
+                        <button class="btn btn-primary">
+                            Add User
+                        </button>
                     </div>
 
                     <!-- Users Table -->
@@ -205,12 +242,12 @@
     </div>
     <!-- End of Page Wrapper -->
 
-    <!-- Bootstrap core JavaScript-->
+    <!-- Bootstrap core JavaScript -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/4.6.0/js/bootstrap.bundle.min.js"></script>
-    <!-- Core plugin JavaScript-->
+    <!-- Core plugin JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
-    <!-- Custom scripts for all pages-->
+    <!-- Custom scripts for all pages -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/startbootstrap-sb-admin-2/4.1.3/js/sb-admin-2.min.js"></script>
 </body>
 
