added history.html/minor change in users

--- a/users.html
+++ b/users.html
@@ -125,7 +125,7 @@
             <!-- Nav Item - Status -->
             <li class="nav-item">
                 <a class="nav-link" href="toolstatus.html">
-                    <i class="fas fa-fw fa-info-circle"></i>
+                    <i class="fas fa-fw fa-ellipsis-h"></i>
                     <span>Status</span></a>
             </li>
 
