--- a/Inventory.html
+++ b/Inventory.html
@@ -71,9 +71,11 @@
         }
         .inventory-item p {
             margin-bottom: 5px;
-            color: #6c757d;
+            color: #000000;
         }
-
+        .inventory-item h5 {
+            color: #000000;
+        }
         .input-group {
             max-width: 300px;
             margin-bottom: 20px;
