--- a/users.html
+++ b/users.html
@@ -86,6 +86,12 @@
         .input-group button {
             border-radius: 0 20px 20px 0;
         }
+        .table-responsive td {
+            color: black;
+        }
+        .table-responsive th {
+            color: black;
+        }
     </style>
 </head>
 
