--- a/history.html
+++ b/history.html
@@ -51,14 +51,14 @@
             <!-- Nav Item - Status -->
             <li class="nav-item">
                 <a class="nav-link" href="toolstatus.html">
-                    <i class="fas fa-fw fa-info-circle"></i>
+                    <i class="fas fa-fw fa-ellipsis-h"></i>
                     <span>Status</span></a>
             </li>
 
             <!-- Nav Item - Users -->
             <li class="nav-item">
                 <a class="nav-link" href="users.html">
-                    <i class="fas fa-fw fa-users"></i>
+                    <i class="fas fa-fw fa-user-circle"></i>
                     <span>Users</span></a>
             </li>
 
