--- a/toolstatus.html
+++ b/toolstatus.html
@@ -14,6 +14,10 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
+            color: black;
+        }
+        .card-body {
+            color: black;
         }
 
         .card-header h5 {
@@ -153,7 +157,7 @@
                         <h1 class="h3 mb-0 text-gray-800">Tool Status</h1>
                     </div>
 
-                    <!-- History Details -->
+                    <!-- Card -->
                     <div class="row">
                         <div class="col-12">
                             <div class="card mb-4">
